# cmake-template

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
